[gd_scene load_steps=3 format=3 uid="uid://dl3pnbtv84ekj"]

[ext_resource type="Script" path="res://ui/pause_menu/bindings/bind.gd" id="1_j7k3t"]
[ext_resource type="Script" path="res://ui/pause_menu/bindings/button_key.gd" id="2_rub4j"]

[node name="Bind" type="HBoxContainer"]
script = ExtResource("1_j7k3t")

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
vertical_alignment = 1

[node name="ResetKey" type="Button" parent="."]
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "↻"

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_rub4j")

[node name="VSeparator" type="VSeparator" parent="."]
layout_mode = 2

[node name="Button2" type="Button" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 3

[node name="ResetController" type="Button" parent="."]
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "↻"

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 8

[connection signal="pressed" from="ResetKey" to="Button" method="_on_reset_key_pressed"]
[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
